# micro-saas-starter

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: health.py
docs/: api.md  architecture.md  setup.md
frontend/: README.md  package-lock.json  package.json
